--- a/style.css
+++ b/style.css
@@ -15,6 +15,42 @@ body
 	margin-left:auto;
 	margin-right:auto;
 }
+#footer
+{
+	margin-top:10px;
+	font-size:15px;
+}
+#tiles
+{
+	width: 360px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:30px;
+	
+}
+.tile1
+{
+	color:#6167de;
+	width:120px;
+	height:120px;
+	float:left;
+	font-size:15px;
+	margin:0 auto;
+}
+.tile2
+{
+	color:#1e2047;
+	width:120px;
+	height:120px;
+	margin:0px;
+	float:left;
+	font-size:15px;
+}
+.tile1:hover
+{
+	color:#ffffff;
+	font-size: 20px;
+}
 .team
 {
 	float:left;
